# rust-kv-store

./: .gitignore  Cargo.toml  build.rs
examples/: grpc_example.rs  rocksdb_example.rs
proto/: kvstore.proto
src/: grpc_client.rs  grpc_server.rs  lib.rs  main.rs  matrix.rs  server.rs
tests/: grpc_tests.rs
