[package]
name = "rust-kv-store"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
bytes = "1.0"
rand = "0.8"
chrono = "=0.4.31"

# gRPC dependencies
tonic = "0.10"
prost = "0.12"

# Storage dependencies
rocksdb = "0.21"
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.10" 